--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,21 @@
 --second-typical-lh:1.33;
 }
 
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6{
+  margin: 0;
+}
 
+ul,
+ol{
+  margin: 0;
+  padding-left: 0;
+}
 
 
 
@@ -18,7 +32,9 @@ font-family: 'Roboto', sans-serif;
 }
 
 .container{
-  width: 1440px;
+  width: 1158px;
+  padding-left: 15px;
+  padding-right: 15px;
   margin: 0 auto;
 }
 
@@ -33,8 +49,6 @@ text-decoration: none;
 
 .header{
     background-color: var(--third-color);
-    padding-top: 24px;
-    padding-bottom: 24px;
     border-bottom: 1px solid #E7E9FC;
 }
 
@@ -64,11 +78,10 @@ color: var(--fourth-color);
 color: var(--fourth-color);
 }
 
-
 .header-navigation{
-  display:flex;
-  align-items: center;
-  margin-right: auto;
+display:flex;
+align-items: center;
+margin-right: auto;
 }
 
 .header-list{
@@ -83,6 +96,9 @@ font-size: 16px;
 line-height: var(--first-typical-lh);
 letter-spacing: 0.02em;
 color: var(--first-color);
+display: block;
+padding-top: 24px;
+padding-bottom: 24px;
 }
 
 .header-mailo:hover,
@@ -99,6 +115,9 @@ font-size: 16px;
 line-height:var(--first-typical-lh);
 letter-spacing: 0.02em;
 color: var(--second-color);
+display: block;
+padding-top: 24px;
+padding-bottom: 24px;
 }
 
 /*-------------INDEX.MAIN-------------*/
@@ -110,29 +129,26 @@ color: var(--second-color);
 .section{
 background-color: var(--second-color);
 text-align: center;
-min-height: 600px;
 padding-top: 188px;
 padding-bottom: 188px;
 }
 
 
 .section-headline{
-min-width: 494px;
-height: 120px; ;
+max-width: 496px;
 font-size: 56px;
 line-height: 1.07;
 text-align: center;
 letter-spacing: 0.02em;
 color: var(--third-color);
-padding-right: 473px;
-padding-left: 473px;
-margin-bottom: 64px;
+padding-top: 188px;
+margin: 0 auto;
+margin-bottom: 48px;
 }
 
 
 .section-btn{
 min-width: 169px;
-height: 56px;
 font-family: inherit;
 font-style: normal;
 font-weight: 500;
@@ -141,10 +157,11 @@ line-height:var(--first-typical-lh);
 letter-spacing: 0.04em;
 color: var(--third-color);
 background-color: var(--fourth-color);
-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 border-radius: 4px;
+border: none;
 cursor: pointer;
 padding:16px 32px;
+margin-top: 48px;
 }
 
 .skills-visually-hidden{
@@ -163,21 +180,22 @@ overflow: hidden;
 
 .skills-list{
   display: flex;
-  padding-right: 156px;
-  padding-left: 156px;
+  padding-top: 120px;
 }
 
+.skills-pages{
+  width: calc((100%-72)/4);
+}
+
+
 .skills-caption{
-width: 264px;
 font-size: 20px;
 line-height: 1.20;
 letter-spacing: 0.02em;
 color: var(--first-color);
-margin: 0px 0px 8px 0px;
 }
 
-.skills-paragraph{
-width: 264px;
+.skills-paragraph{ 
 font-size: 16px;
 line-height: var(--first-typical-lh);
 letter-spacing: 0.02em;
@@ -186,29 +204,31 @@ margin: 8px 24px 0px 0px;
 }
 
 
+.image{
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
 .image-caption{
-min-width: 323px;
 font-size: 36px;
 line-height:1.11;
 text-align: center;
 letter-spacing: 0.02em;
 text-transform: capitalize;
 color: var(--first-color);
-margin: 120px 0px 72px 0px;
+margin-bottom: 72px;
 }
 
 .image-list{
-  width: calc((100-48)/3);
+  width:calc((100%-72)/3);
   display: flex;
   gap: 24px;
-  padding-right: 156px;
-  padding-left: 156px;
-  padding-bottom: 120px;
 }
-   
 
 .info{
 background-color: #F4F4FD;
+padding-top: 120px;
+padding-bottom: 120px;
 }
 
 .info-pre-caption{
@@ -219,23 +239,20 @@ text-align: center;
 letter-spacing: 0.02em;
 text-transform: capitalize;
 color: var(--first-color);
-margin: 0px 0px 72px 0px;
+margin-bottom: 72px;
 }
 
 
 .info-list{
-  width: calc((100-48)/3);
+  width: calc((100%-72)/4);
   display: flex;
-  padding-top: 232px;
-  padding-right: 156px;
-  padding-bottom: 120px;
-  padding-left: 156px;
   gap: 24px;
 }
 
+
+
 .info-item{
 background-color: var(--third-color);
-width: 264px;
 }
 
 .info-caption{
@@ -245,7 +262,8 @@ line-height: 1.2;
 text-align: center;
 letter-spacing: 0.02em;
 color: var(--first-color);
-margin: 32px 60px 8px 60px;
+padding-top: 32px;
+margin-bottom: 8px;
 }
 
 .info-paragraph{
@@ -254,7 +272,7 @@ line-height:var(--first-typical-lh);
 text-align: center;
 letter-spacing: 0.02em;
 color: var(--second-color);
-margin: 8px 60px 32px 60px;
+padding-bottom: 32px;
 }
 
 
@@ -278,14 +296,12 @@ overflow: hidden;
 .portfolio-list{
   display: flex;
   text-align: center;
+  padding: 168px;
   gap: 48px;
-  padding-right: 427px;
-  padding-left: 427px;
 }
 
 .portfolio-button{
   background-color: var(--third-color);
-  
 }
 
 .behind:hover,
@@ -307,26 +323,32 @@ color: var(--fourth-color);
 cursor: pointer;
 border: 1px solid #E7E9FC;
 border-radius: 4px;
-}
-
-
-.border{
-  border: 1px solid #E7E9FC;
+padding: 12px 24px;
 }
 
 .portfolio-navigation{
-  width: 1440px;
   display: flex;
   flex-wrap: wrap;
   column-gap: 24px;
   row-gap: 48px;
-  margin: 72px 0px 0px 0px;
-  padding-bottom: 120px;
-  padding-right: 156px;
   padding-left: 156px;
-  width: calc((100-48)/3); 
-
+  padding-right: 156px;
+  
 }
+
+.portfolio-width{
+  width: calc((100%-48)/3);
+}
+.navigation{
+  width: 360px;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  padding-left: 16px;
+  border-right:1px solid #E7E9FC;
+  border-left: 1px solid #E7E9FC;
+  border-bottom: 1px solid #E7E9FC;
+}
+
   .photo{
     background-color: var(--third-color);
     
@@ -339,9 +361,7 @@ font-size: 20px;
 line-height: 1.2;
 letter-spacing: 0.02em;
 color: var(--first-color);
-padding-left: 16px;
-padding-top: 32px;
-margin: 0px 0px 8px 0px;
+margin-bottom: 8px;
 }
 
 .portfolio-paragraph{
@@ -349,9 +369,6 @@ font-size: 16px;
 line-height:var(--first-typical-lh);
 letter-spacing: 0.02em;
 color: var(--second-color);
-padding-left: 16px;
-padding-bottom: 32px;
-margin: 8px 0px 0px 0px;
 }
 
 
@@ -360,13 +377,13 @@ margin: 8px 0px 0px 0px;
 .footer{
 background-color: var(--first-color);
 padding-top: 100px;
-padding-right: 1020px;
 padding-bottom: 100px;
-padding-left: 156px;
 display: flex;
 }
     
-    
+ .width {
+  width: 264px;
+ }  
 .footer-logo{
 font-family:'Raleway', sans-serif;
 font-weight: 800;
@@ -375,7 +392,6 @@ line-height: var(--second-typical-lh);
 letter-spacing: 0.03em;
 text-transform: uppercase;
 color:#E7E9FC;
-margin:0px 0px 16px 0px;
 }
     
 .footer-span{
@@ -387,6 +403,6 @@ font-size: 16px;
 line-height:var(--first-typical-lh);
 letter-spacing: 0.02em;
 color: #E7E9FC;
-margin:16px 0px 0px 0px;
+margin-top:16px;
 }
     
