--- a/css/style.css
+++ b/css/style.css
@@ -280,6 +280,10 @@ padding-bottom: 32px;
 
 
 /*-------------PORTFOLIO.MAIN-------------*/
+.portfolio{
+  padding-bottom: 120px;
+}
+
 .portfolio-visually-hidden{
 position: absolute;
 width: 1px;
@@ -295,9 +299,9 @@ overflow: hidden;
 
 .portfolio-list{
   display: flex;
-  text-align: center;
-  padding: 168px;
-  gap: 48px;
+  justify-content: center;
+  padding-top: 96px;
+  gap: 24px;
 }
 
 .portfolio-button{
@@ -331,14 +335,11 @@ padding: 12px 24px;
   flex-wrap: wrap;
   column-gap: 24px;
   row-gap: 48px;
-  padding-left: 156px;
-  padding-right: 156px;
+  margin-top: 72px;
+  flex-basis: calc((100%-48px)/3);
   
 }
 
-.portfolio-width{
-  width: calc((100%-48)/3);
-}
 .navigation{
   width: 360px;
   padding-top: 32px;
