--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,11 @@ ol{
   padding-left: 0;
 }
 
-
+.img{
+display: block;
+max-width: 100%;
+height: auto;
+}
 
 .body{
 color:var(--first-color);
@@ -182,7 +186,7 @@ overflow: hidden;
 
 .skills-list{
   display: flex;
- 
+  gap: 24px;
 }
 
 .skills-pages{
@@ -202,7 +206,7 @@ font-size: 16px;
 line-height: var(--first-typical-lh);
 letter-spacing: 0.02em;
 color: var(--second-color);
-margin: 8px 24px 0px 0px;
+margin-top: 8px;
 }
 
 
@@ -225,11 +229,6 @@ margin-bottom: 72px;
   width:calc((100%-72)/3);
   display: flex;
   gap: 24px;
-}
-
-.image-navigation{
-  display: block;
-  max-width: 100%;
 }
 
 .info{
