--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ ol{
   padding-left: 0;
 }
 
-.img{
+img{
 display: block;
 max-width: 100%;
 height: auto;
@@ -226,15 +226,18 @@ margin-bottom: 72px;
 }
 
 .image-list{
-  width:calc((100%-72)/3);
   display: flex;
   gap: 24px;
+}
+
+.image-item{
+  flex-basis: calc((100% - 48px) / 3);
 }
 
 .info{
 background-color: #F4F4FD;
 padding-top: 120px;
-padding-bottom: 120px;
+padding-bottom: 240px;
 }
 
 .info-pre-caption{
@@ -250,7 +253,6 @@ margin-bottom: 72px;
 
 
 .info-list{
-  width: calc((100%-72)/4);
   display: flex;
   gap: 24px;
 }
@@ -258,7 +260,9 @@ margin-bottom: 72px;
 
 
 .info-item{
-background-color: var(--third-color);
+background-color:var(--third-color);
+flex-basis: calc((100% - 3 * 24px) / 4);
+border-radius: 4px;
 }
 
 .info-navigation{
@@ -334,6 +338,7 @@ font-size: 16px;
 line-height:var(--first-typical-lh);
 letter-spacing: 0.04em;
 color: var(--fourth-color);
+background: #F4F4FD;
 cursor: pointer;
 border: 1px solid #E7E9FC;
 border-radius: 4px;
